Fixed form spacing issue

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -75,11 +75,6 @@
 		text-align: center;
 	}
 
-	.form-group {
-		margin-left: auto !important;
-		width: 341px !important;
-	}
-
 	.time-logo-section h3 {
 		padding-right: 10rem !important;
 		padding-left: 10rem !important;
